# Bilevel-Optimization

./: .gitignore
PythonCode/: OptProblems.py  cvxpyPractice.py
PythonCode/__marimo__/session/: OptProblemVisuals_nb.py.json
PythonCode/pixi-py/: pyproject.toml
PythonCode/pixi-py/notebooks/: OptProblemVisuals_nb.py
PythonCode/pixi-py/notebooks/__marimo__/session/: OptProblemVisuals_nb.py.json
PythonCode/pixi-py/scripts/: OptProblemVisuals.py
R Code/: R Code.Rproj
R Code/.Rproj.user/8C647B01/pcs/: files-pane.pper  windowlayoutstate.pper
R Code/.Rproj.user/8C647B01/sources/prop/: INDEX
R Code/.Rproj.user/8C647B01/sources/session-73639fbf/: 4D1C442B  6D9F9A61
R Code/.Rproj.user/shared/notebooks/: paths
R Code/scripts/: basicProblemCreation.R
RCode/: HigherDimProblem.R
RCode/scripts/: BasicProblemGraphing.R  basicProblemCreation.R
