[project]
authors = [{name = "Caleb Broman", email = "caleb.broman@gmail.com"}]
name = "pixi-py"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }
cvxpylayers = ">=1.2.0, <2"

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.5.1,<3"
matplotlib = ">=3.11.0,<4"
cvxpy = ">=1.9.2,<2"
plotnine = ">=0.15.7,<0.16"
plotly = ">=6.9.0,<7"
marimo = ">=0.23.14,<0.24"
